dancefloor.html: maker buttons and lineup button that doesn't do anything

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -4,13 +4,22 @@
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
+    <script src="lib/utils.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/kungFuPanda.js"></script>
+    <script src="src/katanaGuy.js"></script>
+    <script src="src/redGuy.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" >Lineup dancers</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKungFuPanda">add a Kung Fu Panda </a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKatanaGuy">add a Katana fighter</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRedGuy">add a Red Kung Fu fighter</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
