added lineupbutton class, removed lib/utils since we can use init.js

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -4,7 +4,6 @@
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
-    <script src="lib/utils.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/kungFuPanda.js"></script>
@@ -14,7 +13,7 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" >Lineup dancers</a>
+      <a href="#" class="lineupButton" >Lineup dancers</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKungFuPanda">add a Kung Fu Panda </a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKatanaGuy">add a Katana fighter</a>
